Compeleting job title search

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JobScrape">
         <activity
+            android:name=".Main.SkillsFormActivity"
+            android:exported="false" />
+        <activity
             android:name=".Main.SingleOfferActivity"
             android:exported="false" />
         <activity
