--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.job.scrape">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JobScrape">
+        <activity
+            android:name=".Main.InsightsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Main.RecommendationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Main.ClusterOffersActivity"
+            android:exported="false" />
         <activity
             android:name=".Main.SkillsFormActivity"
             android:exported="false" />
